// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Components Floating Button visually looks the same 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginRight": 15,
      },
      undefined,
      undefined,
      Object {
        "borderRadius": 50,
      },
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#9E9E9E",
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 19,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "backgroundColor": "#364590",
          },
          Object {
            "borderRadius": 50,
          },
          Object {
            "padding": 12,
          },
          undefined,
          undefined,
          undefined,
          Object {
            "borderRadius": 50,
            "elevation": 1,
            "height": 60,
            "padding": 5,
            "paddingBottom": 10,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 2,
            "width": 60,
          },
          undefined,
          undefined,
        ]
      }
    >
      <Text
        style={
          Array [
            Object {},
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Array [
              Object {
                "color": "white",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontSize": 17.5,
              },
              Object {
                "fontSize": 40,
              },
              undefined,
              undefined,
              undefined,
            ],
          ]
        }
      >
        +
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button Components Link Button visually looks the same 1`] = `
<Text
  style={
    Object {
      "color": "#72DEFF",
      "fontSize": 16,
    }
  }
/>
`;

exports[`Button Components Primary Button disabled visually looks the same 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginRight": 15,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#9E9E9E",
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 19,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          false,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#364590",
              "borderRadius": 4,
              "elevation": 1,
              "marginTop": 20,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.8,
              "shadowRadius": 2,
            },
            undefined,
          ],
          undefined,
          undefined,
        ]
      }
    >
      <Text
        style={
          Array [
            Object {},
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Array [
              Object {
                "color": "white",
                "fontSize": 20,
              },
              Object {
                "color": "#a7a8a8",
              },
              false,
              Object {
                "fontSize": 18,
              },
              undefined,
              Object {
                "fontWeight": "600",
              },
              Object {
                "fontFamily": "RobotoCondensed-Regular",
              },
            ],
          ]
        }
      >
        PRIMARY
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button Components Primary Button visually looks the same 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginRight": 15,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#9E9E9E",
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 19,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          false,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#364590",
              "borderRadius": 4,
              "elevation": 1,
              "marginTop": 20,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.8,
              "shadowRadius": 2,
            },
            undefined,
          ],
          undefined,
          undefined,
        ]
      }
    >
      <Text
        style={
          Array [
            Object {},
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Array [
              Object {
                "color": "white",
                "fontSize": 20,
              },
              Object {
                "color": "#FFF",
              },
              false,
              Object {
                "fontSize": 18,
              },
              undefined,
              Object {
                "fontWeight": "600",
              },
              Object {
                "fontFamily": "RobotoCondensed-Regular",
              },
            ],
          ]
        }
      >
        PRIMARY
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button Components Primary Button with loading visually looks the same 1`] = `
<View
  style={
    Array [
      Object {
        "marginLeft": 15,
        "marginRight": 15,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
  >
    <View
      pointerEvents="box-only"
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#9E9E9E",
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 19,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          false,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "backgroundColor": "#364590",
              "borderRadius": 4,
              "elevation": 1,
              "marginTop": 20,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.8,
              "shadowRadius": 2,
            },
            undefined,
          ],
          Object {
            "backgroundColor": "#dadee0",
          },
          undefined,
        ]
      }
    >
      <ActivityIndicator
        animating={true}
        color="#FFF"
        hidesWhenStopped={true}
        size="large"
        style={
          Array [
            Object {
              "height": 0,
              "marginHorizontal": 10,
            },
            undefined,
          ]
        }
      />
      <Text
        style={
          Array [
            Object {},
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Array [
              Object {
                "color": "white",
                "fontSize": 20,
              },
              Object {
                "color": "#FFF",
              },
              false,
              undefined,
              undefined,
              Object {
                "fontWeight": "600",
              },
              Object {
                "fontFamily": "RobotoCondensed-Regular",
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button Components Secondary Button visually looks the same 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderColor": "#fff",
      "borderRadius": 5,
      "borderWidth": 1,
      "opacity": 1,
      "padding": 12,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "#FFF",
      }
    }
  >
    SECONDARY
  </Text>
</View>
`;
